--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
-
+@import url('https://fonts.cdnfonts.com/css/miama');
 
 
 .inter-font {
@@ -8,4 +8,134 @@
   font-optical-sizing: auto;
   font-weight: 400;
   font-style: normal;
+}
+#miama-font{
+    font-family: 'Miama', sans-serif;
+    font-size: 4.875rem;
+    font-weight: 400;
+border: 1px solid red;
+}
+body{
+    background-color: rgb(19, 19, 19);
+}
+
+.navbar, .banner, .habits{
+    max-width: 1060px;
+    margin: 0 auto;
+}
+
+
+/* shared styles */
+.bg-pri{
+    background-image: linear-gradient( rgba(17, 17, 17, 1),rgba(119, 119, 119, 0));
+
+}
+.d-flex{
+    display: flex;
+}
+.heading-font-size{
+    color: white;
+    font-size: 3rem;
+    font-weight: 900px;
+}
+.text-orange{
+    color: rgba(230, 83, 60, 1);
+}
+.text-white{
+    color: white;
+}
+.text-light-white{
+    color:rgba(255, 255, 255, 0.5);
+}
+.btn-primary{
+    background-color: rgba(230, 83, 60, 1);
+    padding: 16px 46px;
+    border-radius: 42px;
+    border: none;
+    color: white;
+    font-size: 1.125rem;
+    font-weight: 600px;
+
+}
+
+.btn-secondary{
+    /* background-color: rgba(230, 83, 60, 1); */
+    background: transparent;
+    padding: 16px 46px;
+    border-radius: 42px;
+    border: 1px solid white;
+    color: white;
+    font-size: 1.125rem;
+    font-weight: 600px;
+}
+
+/* header style */
+
+
+
+
+/* navbar style */
+
+.navbar{
+    border: 1px solid red;
+    justify-content: space-between;
+    align-items: center;
+}
+.logo{
+    font-style: italic;
+    font-weight: 800;
+    font-size: 2.25rem;
+}
+.nav-links{
+border: 1px solid red;
+border-radius: 39px;
+justify-content: space-between;
+gap: 50px;
+padding: 10px;
+}
+
+.nav-item{
+    list-style: none;
+ 
+}
+.nav-item:hover{
+    background-color: rgba(230, 83, 60, 1);
+    padding: 5px;
+    border-radius: 39px;
+}
+.nav-link{
+    text-decoration: none;
+}
+.banner{
+    justify-content: space-between;
+}
+
+.banner-content{
+    max-width: 520px;
+    border: 1px solid red;
+}
+.banner-heading{
+font-size: 4.875rem;
+font-weight: ;
+}
+.banner-text{
+
+}
+.join-club{
+    margin-right: 15px;
+}
+
+/* Change Your Habits section */
+
+.habits-text{
+    max-width: 670px;
+    margin: 0px auto;
+}
+
+.habits-heading{
+    text-align: center;
+}
+.habits-description{
+    text-align: center;
+
 }
