--- a/styles/style.css
+++ b/styles/style.css
@@ -14,7 +14,7 @@
     font-weight: 400;
 }
 body{
-    background-color: rgb(19, 19, 19);
+    background-color: rgb(0, 0, 0);
 }
 .navbar, .banner, .habits, .run, 
 .bmi-contents, .meet, 
@@ -31,7 +31,7 @@ body{
 
 /* shared styles */
 .bg-pri{
-    background-image: linear-gradient( rgba(17, 17, 17, 1),rgba(119, 119, 119, 0));
+    background-image: linear-gradient( rgb(29, 29, 29),rgba(119, 119, 119, 0));
 }
 .d-flex{
     display: flex;
@@ -130,14 +130,17 @@ body{
 
 
 
-
-
+/* Header styles */
+.header{
+    margin-bottom: 100px;
+}
 
 /* navbar style */
 
 .navbar{
     justify-content: space-between;
     align-items: center;
+
 }
 .nav-links{
 border: 1px solid rgba(255, 255, 255, 0.1);
@@ -323,7 +326,9 @@ line-height: 120%;
 
 
 /* Change Your Habits section */
-
+.habits{
+    margin-bottom: 100px;
+}
 .habits-text{
     max-width: 670px;
     margin: 0px auto;
@@ -333,6 +338,7 @@ line-height: 120%;
 }
 .habits-description{
     text-align: center;
+    margin-bottom: 58px;
 }
 .habits-cards{
     gap: 40px;
@@ -638,7 +644,9 @@ line-height: 120%;
 
 
 /* your plan style */
-
+.your-plan{
+    margin-bottom: 80px;
+}
 .your-plan-content{
     text-align: center;
 }
