--- a/styles/style.css
+++ b/styles/style.css
@@ -257,6 +257,9 @@ line-height: 120%;
     color: rgba(239, 237, 232, 0.65);
     font-size: 0.8125rem;
 }
+.play-button{
+    display: none;
+}
 .join-club{
     margin-right: 15px;
 }
@@ -297,7 +300,7 @@ line-height: 120%;
     }
     .img-banner-none{
         display: grid;
-        width: 100vw;
+        width: 90vw;
     }
     .video-tutorial{
         width: 145px;
@@ -473,10 +476,8 @@ line-height: 120%;
     .run{
         flex-direction: column;
     }
-    /* .habits{
-        margin: 20px;
-        border: 1px solid red;
-    } */
+
+   
 }
 
 
